mdapiunpkg/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Admission_Interest__c</fullName>
        <label>Admission Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Freshman Admission</fullName>
                </value>
                <value>
                    <fullName>Transfer Admission</fullName>
                </value>
                <value>
                    <fullName>Graduate Admission</fullName>
                </value>
                <value>
                    <fullName>Professional School Admission</fullName>
                </value>
                <value>
                    <fullName>I have applied to the University of Florida</fullName>
                </value>
                <value>
                    <fullName>I have been admitted to the University of Florida</fullName>
                </value>
                <value>
                    <fullName>I do not intend to apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Date__c</fullName>
        <description>Prospect Entry Date</description>
        <inlineHelpText>Prospect Entry Date</inlineHelpText>
        <label>Entry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entry_Term__c</fullName>
        <label>Entry Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fall</fullName>
                </value>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Summer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entry_Year__c</fullName>
        <label>Entry Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_School_Graduation_Year__c</fullName>
        <label>High School Graduation Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Major_Interest_1__c</fullName>
        <label>Major Interest 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Aerospace Engineering</fullName>
                </value>
                <value>
                    <fullName>African American Studies</fullName>
                </value>
                <value>
                    <fullName>Agricultural Education and Communication</fullName>
                </value>
                <value>
                    <fullName>Agricultural Operations Management</fullName>
                </value>
                <value>
                    <fullName>Animal Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Physiology and Kinesiology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Art Education</fullName>
                </value>
                <value>
                    <fullName>Art History</fullName>
                </value>
                <value>
                    <fullName>Astronomy</fullName>
                </value>
                <value>
                    <fullName>Athletic Training</fullName>
                </value>
                <value>
                    <fullName>Biological Engineering</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Biomedical Engineering</fullName>
                </value>
                <value>
                    <fullName>Botony</fullName>
                </value>
                <value>
                    <fullName>Business Administration - General Studies</fullName>
                </value>
                <value>
                    <fullName>Chemical Engineering</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Civil Engineering</fullName>
                </value>
                <value>
                    <fullName>Classical Studies</fullName>
                </value>
                <value>
                    <fullName>Communication Sciences and Disorders</fullName>
                </value>
                <value>
                    <fullName>Computer Engineering</fullName>
                </value>
                <value>
                    <fullName>Computer Science</fullName>
                </value>
                <value>
                    <fullName>Construction Management</fullName>
                </value>
                <value>
                    <fullName>Criminology and Law</fullName>
                </value>
                <value>
                    <fullName>Dance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Major_Interest_2__c</fullName>
        <label>Major Interest 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Aerospace Engineering</fullName>
                </value>
                <value>
                    <fullName>African American Studies</fullName>
                </value>
                <value>
                    <fullName>Agricultural Education and Communication</fullName>
                </value>
                <value>
                    <fullName>Agricultural Operations Management</fullName>
                </value>
                <value>
                    <fullName>Animal Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Physiology and Kinesiology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Art Education</fullName>
                </value>
                <value>
                    <fullName>Art History</fullName>
                </value>
                <value>
                    <fullName>Astronomy</fullName>
                </value>
                <value>
                    <fullName>Athletic Training</fullName>
                </value>
                <value>
                    <fullName>Biological Engineering</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Biomedical Engineering</fullName>
                </value>
                <value>
                    <fullName>Botony</fullName>
                </value>
                <value>
                    <fullName>Business Administration - General Studies</fullName>
                </value>
                <value>
                    <fullName>Chemical Engineering</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Civil Engineering</fullName>
                </value>
                <value>
                    <fullName>Classical Studies</fullName>
                </value>
                <value>
                    <fullName>Communication Sciences and Disorders</fullName>
                </value>
                <value>
                    <fullName>Computer Engineering</fullName>
                </value>
                <value>
                    <fullName>Computer Science</fullName>
                </value>
                <value>
                    <fullName>Construction Management</fullName>
                </value>
                <value>
                    <fullName>Criminology and Law</fullName>
                </value>
                <value>
                    <fullName>Dance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Major_Interest_3__c</fullName>
        <label>Major Interest 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Aerospace Engineering</fullName>
                </value>
                <value>
                    <fullName>African American Studies</fullName>
                </value>
                <value>
                    <fullName>Agricultural Education and Communication</fullName>
                </value>
                <value>
                    <fullName>Agricultural Operations Management</fullName>
                </value>
                <value>
                    <fullName>Animal Science</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Applied Physiology and Kinesiology</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Art Education</fullName>
                </value>
                <value>
                    <fullName>Art History</fullName>
                </value>
                <value>
                    <fullName>Astronomy</fullName>
                </value>
                <value>
                    <fullName>Athletic Training</fullName>
                </value>
                <value>
                    <fullName>Biological Engineering</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Biomedical Engineering</fullName>
                </value>
                <value>
                    <fullName>Botony</fullName>
                </value>
                <value>
                    <fullName>Business Administration - General Studies</fullName>
                </value>
                <value>
                    <fullName>Chemical Engineering</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Civil Engineering</fullName>
                </value>
                <value>
                    <fullName>Classical Studies</fullName>
                </value>
                <value>
                    <fullName>Communication Sciences and Disorders</fullName>
                </value>
                <value>
                    <fullName>Computer Engineering</fullName>
                </value>
                <value>
                    <fullName>Computer Science</fullName>
                </value>
                <value>
                    <fullName>Construction Management</fullName>
                </value>
                <value>
                    <fullName>Criminology and Law</fullName>
                </value>
                <value>
                    <fullName>Dance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>